add form list and form view 2